--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,14 @@
   <script src="//code.tidio.co/l5fenguugepw2qw77ikkhhmjuw5ioxud.js" async></script>
   <script src="//code.tidio.co/yo1tybrk1pncexyqkffx5m2iikik1x0h.js" async></script>
   <script src="https://trade.mql5.com/trade/widget.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" data-react-helmet="true"></script>
 
+  <script type="text/javascript">
+    var websocketurl1 = "https://nexaexch.net:2053/";
+    client = io(websocketurl1);
+    client.on("connect", function (data) { });
+
+  </script>
 </head>
 
 <body>
