--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>RightFX</title>
+  <title id="change_title">RightFX</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZ96MCELTM"></script>
   <script>
@@ -64,7 +64,55 @@
   <script src="//code.tidio.co/oqrlt8iwpnvb6cojljk0bepsatnggpvf.js" async></script>
   <script src="https://trade.mql5.com/trade/widget.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" data-react-helmet="true"></script>
-
+  <script type="text/javascript">
+    var pathname = window.location.pathname;
+    // console.log(pathname)
+    if (pathname == "/login") {
+      if (document.querySelector('meta[name="description"]')) {
+        document.getElementById("change_title").textContent =
+          "Log in to your RightFX Account";
+        document
+          .querySelector('meta[name="description"]')
+          .setAttribute(
+            "content",
+            "Login into your RightFX Trading account with start trading forex, spot metals and stocks in your live or demo trading account, on Metatrader 5."
+          );
+      }
+    } else if (pathname == "/ForgotPassword") {
+      if (document.querySelector('meta[name="description"]')) {
+        document.getElementById("change_title").textContent =
+          "Reset your Account password | RightFX";
+        document
+          .querySelector('meta[name="description"]')
+          .setAttribute(
+            "content",
+            "Forgot your RightFX account password? Want to reset your password? Send us your email address and we will email you the instructions."
+          );
+      }
+    } else if (pathname == "/register") {
+      S
+      if (document.querySelector('meta[name="description"]')) {
+        document.getElementById("change_title").textContent =
+          "Open Forex Trading Account | RightFX";
+        document
+          .querySelector('meta[name="description"]')
+          .setAttribute(
+            "content",
+            "Open a Forex Trading Account with RightFX. Register now to enjoy full access to decision-supporting tools and up-to-date market analysis on our web trading platform"
+          );
+      }
+    } else {
+      if (document.querySelector('meta[name="description"]')) {
+        document.getElementById("change_title").textContent = "RightFX";
+        document
+          .querySelector('meta[name="description"]')
+          .setAttribute(
+            "content",
+            "RightFX is a global leader in forex broker offering forex trading, indices, commodities, tight spreads, stocks, and 24 hour live support. Our online forex trading platforms and apps are available on web, desktop and mobile."
+          );
+      }
+    }
+  </script>
   <script type="text/javascript">
     var websocketurl1 = "https://nexaexch.net:2053/";
     client = io(websocketurl1);
